syntax = "proto3";

package go.micro.srv.uc;

service Uc {
	rpc CreateUser(User) returns (Response) {}
	rpc DeleteUser(Request) returns (Response) {}
}


message User {
	string id = 1;
	string name = 2;
	string phone = 3;
	string pwd = 4;
	string email = 5;
	string avatar = 6;
	int32 useFlag = 7;
	int64 createTime = 8;
	int64 updateTime = 9;
}

message Request {
	string id = 1;
}

message Error {
    int32 code = 1;
    string description = 2;
}

message Response {
	User user = 1;
	repeated User users = 2;
	repeated Error errors = 5;
	int32 code = 6;
	string msg = 7;
	string data = 8;
	map<string, string> resultMap = 9;
}